<resources>
    <string name="app_name">Menu Pilihan Hari Ini!</string>
    <string name="food_name">Nama Makanan</string>
    <string name="harga">Harga</string>
    <string name="about">about</string>
    <string name="nama">I Made Eko Satria Wiguna</string>
    <string name="email">imadeekosatriawiguna@gmail.com</string>
    <string name="itemimg">itemImg</string>
    <string name="favorit">Favorit</string>
    <string name="stock">Stock</string>
    <string name="conten_text">conten_text</string>
    <string name="ingridient">Ingridient</string>
    <string name="gambar_makanan">gambar_makanan</string>
    <string name="beli">Beli</string>
    <string name="detail">Detail</string>
    <string name="bahan">Bahan:</string>
    <string name="detail_bahan">Detail bahan</string>
    <string name="instagram">instagram</string>
    <string name="whatsapp">whatsapp</string>
    <string name="facebook">facebook</string>
    <string name="linkedin">linkedin</string>
    <string name="share">share</string>
</resources>