<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        
        <ImageView
            android:clickable="true"
            android:id="@+id/item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/gambar_makanan" />

        <TextView
            android:id="@+id/nama_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/item_photo"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/food_name" />

        <TextView
            android:id="@+id/harga_item"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/nama_item"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/item_photo"
            android:ellipsize="end"
            android:textColor="#4CAF50"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            tools:text="@string/harga" />

        <TextView
            android:id="@+id/stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_button"
            android:layout_below="@+id/harga_item"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/item_photo"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            tools:text="@string/stock" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/item_photo"
            android:orientation="horizontal">

            <Button
                android:id="@+id/favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorit"
                android:textSize="12sp"/>
            
            <Button
                android:id="@+id/buy"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/beli"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>